# StudyNote

./: .gitattributes  .gitignore  Activity生命周期.md  Android启动模式.md  EGL.md  README.md  c++笔记(待填充).md  ffmpeg.md  view手势事件.md  我走过最长的路就是环信的套路.md  正交投影与透视投影.md  简介与基础.md  纹理(未完成).md  自定义控件-layout篇.md  音视频学习计划.md
AndroidMediaNote/: 第二章 MediaPlayer.md
AndroidMediaNote/MediaPlayerDemo/: .gitignore
AndroidMediaNote/MediaPlayerDemo/app/src/main/: AndroidManifest.xml
BlockQueue/: BlockQueue.cpp  BlockQueue.h  CMakeLists.txt  main.cpp
FFmpegDemo/app/: CMakeLists.txt  build.gradle
FFmpegDemo/app/src/androidTest/java/com/example/ether/ffmpegdemo/: ExampleInstrumentedTest.java
FFmpegDemo/app/src/main/: AndroidManifest.xml
FFmpegDemo/app/src/main/cpp/: CMakeLists.txt  Decode.cpp  Decode.h  FFmpegTest.cpp  com_example_ether_ffmpegdemo_FFmpegTest.h  native-lib.cpp
FFmpegDemo/app/src/main/cpp/decode/: FFmpegDemode.cpp  FFmpegDemode.h
FFmpegDemo/app/src/main/cpp/includes/libavutil/: imgutils.h
FFmpegDemo/app/src/main/cpp/includes/libswscale/: swscale.h
FFmpegDemo/app/src/main/java/com/example/ether/ffmpegdemo/: FFmpegTest.java  MainActivity.java
FFmpegDemo/app/src/main/java/com/example/ffmpegdemo/: MainActivity.java  Player.java
FFmpegDemo/app/src/main/java/com/yetote/ffmpegdemo/: MainActivity.java  Player.java
FFmpegDemo/app/src/main/jni/includes/x86/libavutil/: aes.h
FFmpegDemo/app/src/main/res/layout/: activity_main.xml
FFmpegDemo/app/src/test/java/com/example/ether/ffmpegdemo/: ExampleUnitTest.java
FFmpegDemo/gradle/wrapper/: gradle-wrapper.properties
FFmpegDemo2/app/: CMakeLists.txt  build.gradle
FFmpegDemo2/app/src/main/cpp/: native-lib.cpp
FFmpegDemo2/gradle/wrapper/: gradle-wrapper.properties
FFmpegNote/: av_register_all.md  avformat_alloc_context.md  avformat_open_input.md
FFmpegNote/结构体/: AVClass.md  AVFormatContext.md  AVFormatInternal.md  AVInputFormat.md  AVOutputFormat.md
FFplayer/app/src/main/: AndroidManifest.xml
FFplayer/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
FFplayer/node/: 笔记.md
HardwareEncodeAudio/app/debug/: app-debug.apk
HardwareEncodeAudio/app/src/main/: AndroidManifest.xml
HardwareEncodeAudio/gradle/wrapper/: gradle-wrapper.properties
HardwareEncodeMP4/app/src/main/: AndroidManifest.xml
HardwareEncodeMP4/gradle/wrapper/: gradle-wrapper.properties
IjkDemo/: .gitignore  ijkplayer.md
IjkDemo/Note/: 1-初始化.md  2-setDataSource.md  3-perpare.md  3-消息队列.md  4-perpare.md  5-read_thread.md
IjkDemo/app/src/main/: AndroidManifest.xml
IjkDemo/app/src/main/cpp/: native-lib.cpp
IjkDemo/ijkmedia/ijkplayer/: ff_ffmsg_queue.h  ff_ffpipeline.c  ff_ffplay.c  ijkplayer.c
IjkDemo/ijkmedia/ijkplayer/android/: ijkplayer_android.c  ijkplayer_jni.c
IjkDemo/ijkmedia/ijkplayer/android/pipeline/: ffpipeline_android.c  ffpipenode_android_mediacodec_vdec.c
LameDemo/app/: CMakeLists.txt  build.gradle
LameDemo/app/src/main/: AndroidManifest.xml
MediaCodecDemo/app/src/main/: AndroidManifest.xml
MediaCodecDemo/gradle/wrapper/: gradle-wrapper.properties
MediaPlayerDemo/: .gitignore
MediaPlayerDemo/app/src/main/: AndroidManifest.xml
MyPlayer/app/: build.gradle
MyPlayer/app/src/main/: AndroidManifest.xml
MyPlayer/gradle/wrapper/: gradle-wrapper.properties
NDKDemo/app/: CMakeLists.txt  build.gradle
NDKDemo/app/src/main/: AndroidManifest.xml
NDKDemo/gradle/wrapper/: gradle-wrapper.properties
NDKPlayer/app/: CMakeLists.txt
NDKPlayer/app/src/main/: AndroidManifest.xml
NDKPlayer/gradle/wrapper/: gradle-wrapper.properties
NativeMediaDemo/app/src/main/: AndroidManifest.xml
NewPlayer/: .gitignore  build.gradle
NewPlayer/app/: build.gradle
NewPlayer/app/src/main/: AndroidManifest.xml
NewPlayer/gradle/wrapper/: gradle-wrapper.properties
OpenGLNativeDemo/app/: CMakeLists.txt  build.gradle
OpenGLNativeDemo/app/src/main/: AndroidManifest.xml
OpenGLNativeDemo/gradle/wrapper/: gradle-wrapper.properties
OpenGLPlay/app/src/main/: AndroidManifest.xml
OpenGLPlay/gradle/wrapper/: gradle-wrapper.properties
OpenSLDemo/app/: CMakeLists.txt  build.gradle
OpenSLDemo/app/src/main/: AndroidManifest.xml
OpenSLDemo/gradle/wrapper/: gradle-wrapper.properties
OpenSLPlay/app/: CMakeLists.txt
OpenSLPlay/app/src/main/: AndroidManifest.xml
VideoDemo1/: 音视频学习计划1.md
VideoDemo1/app/: build.gradle
VideoDemo1/app/src/main/: AndroidManifest.xml
VideoDemo1/gradle/wrapper/: gradle-wrapper.properties
VideoDemo2/app/: build.gradle
VideoDemo2/app/src/main/: AndroidManifest.xml
VideoDemo2/gradle/wrapper/: gradle-wrapper.properties
VideoDemo3/: AudioRecord和AudioTrack.md
VideoDemo3/app/: build.gradle
VideoDemo3/app/src/main/: AndroidManifest.xml
VideoDemo3/gradle/wrapper/: gradle-wrapper.properties
VideoDemo4/app/: build.gradle
VideoDemo4/app/src/main/: AndroidManifest.xml
VideoDemo5/app/: build.gradle
VideoDemo5/app/src/main/: AndroidManifest.xml
VideoDemo6/app/: build.gradle
VideoDemo6/app/src/main/: AndroidManifest.xml
VideoDemo7/app/: build.gradle
VideoDemo7/app/src/main/: AndroidManifest.xml
VideoDemo8/app/src/main/: AndroidManifest.xml
VideoDemo9/app/: build.gradle
VideoDemo9/app/src/main/: AndroidManifest.xml
VideoDemo9/gradle/wrapper/: gradle-wrapper.properties
ffmpeg-4.0.2/: build_arm-v7a.sh  config.h  configure
ffmpeg-4.0.2/doc/: config.texi
ffmpeg-4.0.2/doc/examples/pc-uninstalled/: libavcodec-uninstalled.pc  libavfilter-uninstalled.pc  libavformat-uninstalled.pc
ffmpeg-4.0.2/ffbuild/: config.fate  config.mak  config.sh
ffmpeg-4.0.2/libavcodec/: bsf_list.c  codec_list.c  mpegaudiodec_fixed.d  parser_list.c
ffmpeg-4.0.2/libavfilter/: filter_list.c  libavfilter.pc
ffmpeg-4.0.2/libavformat/: demuxer_list.c  muxer_list.c  protocol_list.c  wavenc.d
ffmpeg-4.0.2/libswresample/: libswresample.pc
leetcode/array/简单/: 按奇偶排序数组.md  数组拆分 I.md
leetcode/简单/: 回文数.md  最长公共前缀.md
leetcode/简单/array/: 按奇偶排序数组.md  有序数组的平方.md
templates/: Android.xml  C_C__.xml  Readme.md  glsl.xml  plain.xml
设计模式/: 代理模式.md  单例模式.md  原型模式.md  工厂模式.md  建造者模式.md  模板方法.md  设计原则.md
(+314 files in other folders)
